# ByteDanceChallenge-LogicSpark

./: .gitignore  README.md  design.md  docker-compose.yml
backend/: pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/agents/: base.py  mvp_agents.py  registry.py  specialized_agents.py
backend/app/api/: health.py  projects.py
backend/app/core/: ids.py
backend/app/db/: models.py  session.py
backend/app/orchestrator/: __init__.py  dag.py  executor.py  retry.py  scheduler.py
backend/app/prompts/: extraction_agent.md  fact_check_agent.md  intent_agent.md  planner_agent.md  report_writer_agent.md
backend/app/schemas/: __init__.py  agent_io.py  claim.py  common.py  competitor.py  evidence.py  project.py  report.py  task.py
backend/app/services/: __init__.py  cost_tracker.py  embedding_service.py  llm_service.py  observability.py  storage_service.py  vector_store.py
backend/app/tests/: test_laptop_domain.py  test_mvp_flow.py
backend/app/tools/: base.py  browser.py  chart.py  citation.py  crawler.py  database.py  document_parser.py  fixtures.py  registry.py  report_renderer.py  vector_search.py  web_search.py
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: CreateProjectForm.tsx  ProjectAutoRunner.tsx
frontend/components/agent-trace/: AgentRunList.tsx  DurationChart.tsx
frontend/components/dag/: DAGFlow.tsx
frontend/components/evidence/: EvidenceList.tsx
frontend/lib/: api.ts
frontend/types/: api.ts
(+16 files in other folders)
