[project]
name = "competescope-backend"
version = "0.1.0"
description = "CompeteScope AI FastAPI backend"
requires-python = ">=3.11,<3.15"
dependencies = [
  "beautifulsoup4>=4.12.3",
  "fastapi>=0.115.0",
  "httpx>=0.27.2",
  "markdown>=3.6",
  "psycopg[binary]>=3.2.3",
  "pydantic>=2.8.2",
  "pydantic-settings>=2.4.0",
  "qdrant-client>=1.12.1",
  "python-multipart>=0.0.9",
  "redis>=5.0.8",
  "sqlalchemy>=2.0.32",
  "uvicorn[standard]>=0.30.6"
]

[dependency-groups]
dev = [
  "pytest>=8.3.2",
  "pytest-asyncio>=0.24.0"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app/tests"]
pythonpath = ["."]
